--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,16 @@
     "doctrine/doctrine-bundle": "^2.8",
     "doctrine/doctrine-migrations-bundle": "^3.2",
     "doctrine/orm": "^2.14",
+    "guzzlehttp/guzzle": "^7.8",
     "knplabs/knp-paginator-bundle": "^6.2",
     "symfony/console": "6.2.*",
+    "symfony/css-selector": "6.2.*",
+    "symfony/dom-crawler": "^5.0",
     "symfony/dotenv": "6.2.*",
     "symfony/flex": "^2",
     "symfony/form": "6.2.*",
     "symfony/framework-bundle": "6.2.*",
+    "symfony/http-client": "6.2.*",
     "symfony/runtime": "6.2.*",
     "symfony/security-bundle": "6.2.*",
     "symfony/serializer": "6.2.*",
