--- a/config/services.yaml
+++ b/config/services.yaml
@@ -37,6 +37,7 @@ services:
         arguments:
             $passwordHasher: '@Symfony\Component\PasswordHasher\Hasher\UserPasswordHasherInterface'
             $managerRegistry: '@doctrine'
+            $entityManager: '@doctrine.orm.entity_manager'
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
