--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
   "require-dev": {
     "doctrine/doctrine-fixtures-bundle": "^3.5",
     "friendsofphp/php-cs-fixer": "^3.56",
+    "phpstan/phpstan": "^1.10",
     "symfony/maker-bundle": "^1.48"
   },
   "config": {
