add publisher base voter

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -28,7 +28,7 @@ services:
             $appSecret: '%env(APP_SECRET)%'
             $requestStack: '@request_stack'
 
-    App\Security\Voter\PublisherEditVoter:
+    App\Security\Voter\PublisherBaseVoter:
         arguments:
             $requestStack: '@request_stack'
             $jwtService: '@App\Generic\Auth\JWT'
