--- a/phpstan.dist.neon
+++ b/phpstan.dist.neon
@@ -6,3 +6,10 @@ parameters:
         - public/
         - src/
         - tests/
+
+    excludes_analyse:
+        - src/Generic/Web/Controllers/GenericUpdateController.php
+        - src/Generic/Web/Controllers/GenericListController.php
+        - src/Generic/Web/Controllers/GenericDetailController.php
+        - src/Generic/Web/Controllers/GenericDeleteController.php
+        - src/Generic/Api/Trait/Security.php 
