--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "guzzlehttp/guzzle": "^7.8",
     "knplabs/knp-paginator-bundle": "^6.2",
     "nelmio/cors-bundle": "^2.4",
+    "symfony/asset": "6.2.*",
     "symfony/console": "6.2.*",
     "symfony/css-selector": "6.2.*",
     "symfony/dom-crawler": "^5.0",
