--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "watch-build": "nodemon --watch src --exec 'ng build --output-path=../public/build'"
+    "watch-build": "nodemon --watch src --exec \"ng build --output-path=../public/build\""
   },
   "private": true,
   "dependencies": {
